syntax = "proto3";
package models;

option go_package = "protocols/orders-admin-package";

// Shop is
message Order {
    bytes           uuid        = 1;
    string          name        = 2;
    string          description = 3;
    string          mealType = 4;
    float           price       = 5;
    int32           quantity = 6;
    string          day = 7;
}

message Orders{
    repeated Order Orders = 1;
}

// BattlesEmpty is
message ShopsEmpty {}