syntax = "proto3";
package models;

option go_package = "protocols/orders-admin-package";

import "orders-admin-pkg-models.proto";

// OrderService is
service OrderService {
    rpc GetOrders(OrderEmpty) returns(models.Orders);
    rpc CreateOrder(models.Order) returns(OrderEmpty);
    rpc OrderByName(OrderGetter) returns(models.Order);


}

message OrderEmpty {}

message OrderGetter {
    oneof getter {
        bytes   uuid    = 1;
        string  code    = 2;
        string  name    = 3;
    }
}
